@startuml
'skinparam monochrome true
'skinparam shadowing false

title UC030 - As SNS user use the application to schedule a vaccination

class SNSUser {
    + SNSUser_CC: String [PK]
    + Password: String
    + SNSUser_E-mail: String
    + SNSUser_PhoneNumber: int
}

class VaccinationCenter {
    + VaccinationCenter_ID : int [PK]
    + Location : String
}

class SNS{
    + Appointment_ID : String [PK]
    + SNSUser_CC : String [FK]
    + VaccinationCenter_ID : int [FK]
    + Date : Date
}

' Relationships
SNSUser "*" -- "1" SNS :  >
SNS "1" -- "*" VaccinationCenter :  >
@enduml
